# yu-gi-oh-ai-tools

./: AGENTS.md  README-zh.md  README.md  go.mod  go.sum
.ai-docs/: testing-code-style.md
.github/workflows/: test-on-push.yml
cmd/: main.go
lib/cdb/: card.go  card_test.go  constants.go  constants_test.go  db.go  db_test.go  double_map.go  double_map_test.go  stringsconf.go  stringsconf_test.go
lib/git/: git_test.go
lib/tools/: get_card_by_id.go  tools.go
mcp-servers/ygo-db/: AGENTS.md  go.mod
mcp-servers/ygo-db/.ai-docs/: go-optional.md  (+1 more)
skills/: README.md  pyproject.toml
skills/count-deck/: SKILL.md
skills/count-deck/scripts/: count_deck.py
skills/deck-analyzer/: SKILL.md
skills/deck-analyzer/resources/: boardbreakers.csv  handtraps.csv
skills/deck-parser/: SKILL.md
skills/simple-calculator/: SKILL.md
skills/simple-calculator/scripts/: calculate.py
skills/starter-probability/: SKILL.md
skills/starter-probability/scripts/: starter_probability.py
skills/tests/: test_calculate.py  test_count_deck.py  test_fetch_meta_deck.py  test_starter_probability.py
skills/tests/fixtures/decks/: empty_deck.ydk  only_main.ydk  sample_deck.ydk
skills/ygo-deck-analyze/: SKILL.md
skills/ygoprodeck-get-meta/scripts/: fetch_meta_deck.py
test-dir-zh-cn/: .gitignore  AGENTS.md  README.md  test-deck.ydk
test-dir-zh-cn/.gemini/: settings.json
test-dir-zh-cn/test-deck_analysis/: TODO.md  deck_analysis.json  deck_parsed.json  deck_raw.csv  report.md
test-dir/.gemini/: settings.json
ygo-db/: .golangci.yml  Justfile  README.md  go.mod  go.sum
(+38 files in other folders)
